2003-02-20  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (style_set): don't set fonts in idle time, but right
	now, this avoids recalculating whole document (after content is
	loaded)

	* htmltext.c (html_text_text_line_length): modify line_offset
	parameter
	(translated_len): new helper function
	(calc_word_width): correct offsets fot tabs

	* htmlpainter.c (html_painter_translate_text): dereference
	line_offset

	* htmltext.c (get_glyphs): translate special characters

2003-02-19  Radek Doulik  <rodo@ximian.com>

	* htmlplainpainter.c (draw_text): prepare temporary items and
	glyphs when needed

	* htmltextslave.c (get_glyphs_part): translate text before shaping
	(get_glyphs): ditto

	* htmlpainter.c (html_painter_translate_text): new function,
	exports painter text translation
	(calc_translated_text_bytes): return bytes length instead of delta
	(html_painter_calc_text_size): use bytes return value from
	calc_translated_text_bytes, this saves us one walk thru the whole
	text, removed unnecessary (forgotten?) second call to
	calc_translated_text_bytes
	(html_painter_draw_text): use bytes instead of delta as above

2003-02-18  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (calc_word_width): use cached items only for non
	empty texts to make pango shape happy

	* htmltextslave.c (calc_width): use cached items and glyphs

	* htmltext.c (calc_word_width): use cached items and call shape
	just once
	(html_text_get_items): return items just for gdk and plain painter
	so printing works right again

	* htmltextslave.c (get_items): use html_text_get_items
	(draw_highlighted): use cached items and glyphs

	* htmlengine.c (parse_i): don't pass possibly uninitialized memory
	to tokenizer

2003-02-07  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (draw_quotes): move the plain painter check out
	of the loop.

2003-02-05  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_f): no pending para for forms.
