@@ -1,5 +1,9 @@
 2003-02-20  Radek Doulik  <rodo@ximian.com>
 
+	* htmltext.c (html_utf8_strnchr): new helper function
+	(html_text_text_line_length): use own html_utf8_strnchr, this
+	increases speed really dramatically ;-)
+
 	* gtkhtml.c (style_set): don't set fonts in idle time, but right
 	now, this avoids recalculating whole document (after content is
 	loaded)
